	PR c++/71117 - core 2189 and generic lambda

* call.c (add_template_conv_candidate): Disable if there are
	viable candidates.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@238394 138bc75d-0d04-0410-961f-82ee72b054a4